--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,19 @@
 # Built application files
-*.apk 
+*.apk
 *.ap_
 
-# Files for the ART/Dalvik VM
+# Files for the Dalvik VM
 *.dex
 
 # Java class files
 *.class
 
 # Generated files
-bin/ 
-gen/ 
-out/
+bin/
+gen/
 
 # Gradle files
-.gradle/ 
+.gradle/
 build/
 
 # Local configuration file (sdk path, etc)
@@ -26,15 +25,9 @@ proguard/
 # Log Files
 *.log
 
-# Android Studio Navigation editor temp files
-.navigation/
-
-# Android Studio captures folder
-captures/
-
-# Intellij
-*.iml 
-.idea/workspace.xml
-
-# Keystore files
-*.jks
+# IntelliJ IDEA
+.idea/
+*/.idea/
+*.iml
+*/gen-gen-external-apklibs/
+*/gen-external-apklibs/
