--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <groupId>eu.gsottbauer</groupId>
     <artifactId>equalizerview</artifactId>
     <version>0.3</version>
@@ -94,6 +97,5 @@
         </pluginManagement>
     </build>
 
-    <dependencies>
-    </dependencies>
+    <dependencies></dependencies>
 </project>
